<resources>
    <string name="app_name">My Notes</string>
    <string name="app_version">v1.0</string>
    <string name="developer_name">Mohamed Hassan</string>

    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="search_note">Search note</string>

    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="edit">Edit</string>
    <string name="add_note">Add note</string>
    <string name="trash">Trash</string>
    <string name="favorite">Favorite</string>
    <string name="delete_all_notes">Delete all Notes</string>
    <string name="restore">Restore</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note?</string>
    <string name="move_trash">Move to trash</string>
    <string name="move_note_trash_message">Are you sure you want to move this note to trash?</string>
    <string name="move_note_to_trash">Move note to Trash?</string>
    <string name="delete_all_notes_dialog_message">Are you sure you want to move all notes to trash?</string>
    <string name="delete_all_notes_dialog_title">Delete all notes ?</string>
    <string name="empty">Empty</string>
    <string name="empty_trash">Empty trash?</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="app_info">App info</string>
    <string name="rate_us">Rate us</string>
    <string name="app_name_info">App name</string>
    <string name="app_version_info">App version</string>
    <string name="app_developer_info">App developer</string>
    <string name="view_by">View by</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="view">View</string>
    <string name="no_notes">No notes yet.\nTap the + button to create new note.</string>
    <string name="no_notes_in_trash">No Notes in trash</string>
    <string name="no_favorite_notes">No Favorite Notes</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="trash_14_days_message">Notes in the Trash will be deleted forever after 14 days</string>
    <string name="note_added">Note added</string>
    <string name="note_cannot_be_empty">Note can not be empty</string>
    <string name="all_notes_moved_to_trash">All notes moved to trash</string>
    <string name="delete_note_forever_message">Are you sure you want to delete this note forever?</string>
    <string name="note_moved_to_trash">Note moved to trash</string>
    <string name="note_deleted">Note deleted</string>
    <string name="choose_view">Choose a list view</string>
    <string name="view_saved">View saved</string>

</resources>