<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.mhss.app.mynotes.ui.fragments.MainFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            />
        <action
            android:id="@+id/action_mainFragment_to_addNoteFragment"
            app:destination="@id/addNoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.mhss.app.mynotes.ui.fragments.DetailsFragment"
        android:label="@string/add_note"
        tools:layout="@layout/fragment_details">

        <argument
            android:name="note"
            app:argType="com.mhss.app.mynotes.database.Note" />
        <action
            android:id="@+id/action_detailsFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.mhss.app.mynotes.ui.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_appInfoFragment"
            app:destination="@id/appInfoFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.mhss.app.mynotes.ui.fragments.TrashFragment"
        android:label="@string/trash"
        tools:layout="@layout/fragment_trash" >
        <action
            android:id="@+id/action_trashFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.mhss.app.mynotes.ui.fragments.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
             />
    </fragment>
    <fragment
        android:id="@+id/appInfoFragment"
        android:name="com.mhss.app.mynotes.ui.fragments.AppInfoFragment"
        android:label="@string/app_info"
        tools:layout="@layout/fragment_app_info" />
    <fragment
        android:id="@+id/addNoteFragment"
        android:name="com.mhss.app.mynotes.ui.fragments.AddNoteFragment"
        android:label="@string/add_note"
        tools:layout="@layout/fragment_add_note" />
</navigation>