<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AppInfoFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_info"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="24dp"
            android:gravity="start"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:padding="8dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            >

            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_info"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:padding="24dp"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:text="@string/app_version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/gray"
                android:padding="8dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_developer_info"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="24dp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:text="@string/developer_name"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:padding="8dp"
            />

    </RelativeLayout>

    </LinearLayout>

</ScrollView>