<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MainFragment">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/search_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="16dp"
    android:textSize="16sp"
    app:boxCornerRadiusBottomEnd="15dp"
    app:boxCornerRadiusBottomStart="15dp"
    app:boxCornerRadiusTopEnd="15dp"
    app:boxCornerRadiusTopStart="15dp"
    app:hintAnimationEnabled="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noteSearchEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/search_note"
        android:drawableStart="@drawable/custom_search_ic"
        android:inputType="text"
        />

</com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_rec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_layout"
        tools:listitem="@layout/rec_custom_item"
        android:layoutAnimation="@anim/rec_item_layout_animation"
        android:transitionName="details_fragment"
        />

    <TextView
        android:id="@+id/no_notes"
        android:text="@string/no_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_note_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_note"
        android:transitionName="add_fragment"/>
</androidx.constraintlayout.widget.ConstraintLayout>